toolchains/javascript/tests/snapshots/tier1_sync_test__javascript_toolchain_tier1__sync_project_workspace_dependencies__format_workspace.snap
---
source: toolchains/javascript/tests/tier1_sync_test.rs
expression: "std::fs::read_to_string(sandbox.path().join(\"base/package.json\")).unwrap()"
---
{
  "name": "base",
  "version": "0.0.0",
  "dependencies": {
    "a": "workspace:*"
  },
  "devDependencies": {
    "b": "workspace:*"
  },
  "peerDependencies": {
    "c": "^7.0.0"
  }
}
